# dayu-disk-manager

./: .gitignore  .qiniu.local.json.example  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
.superpowers/sdd/: task-10-report.md
docs/notes/: auto-update-publish.md
docs/superpowers/notes/: mft-spike-result.md
docs/superpowers/plans/: 2026-07-18-dayu-disk-manager.md  2026-07-20-mft-tree-scan.md  2026-07-23-migration-speedup.md  2026-07-24-auto-update-qiniu.md
docs/superpowers/specs/: 2026-07-18-dayu-disk-manager-design.md  2026-07-20-mft-tree-scan-design.md  2026-07-23-migration-speedup-design.md  2026-07-24-auto-update-qiniu-design.md
scripts/: release.bat  upload-qiniu.js  upload-qiniu.test.ts
src/: App.vue  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: mft_export.rs  mft_spike.rs
src-tauri/src/: app_state.rs  commands.rs  error.rs  file_ops.rs  history.rs  journal.rs  junction.rs  lib.rs  main.rs  mft.rs  migrator.rs  models.rs  process_probe.rs  safety.rs  scanner.rs  store.rs  vss.rs  win32.rs
src-tauri/tests/: crash_recovery.rs  e2e_migration.rs  mft_fixture.rs  scan_contract_dump.rs  smoke.rs
src-tauri/tests/fixtures/ntfs_sample/: README.md
src-tauri/tests/fixtures/ntfs_sample/raw/: volume_meta.txt
src/components/: ProgressStage.test.ts  ProgressStage.vue  SizeCell.vue
src/composables/: useUpdater.test.ts  useUpdater.ts
src/ipc/: events.ts  invoke.ts  log.ts  types.test.ts  types.ts
src/ipc/__fixtures__/: scan-contract.json
src/router/: index.ts
src/stores/: links.test.ts  links.ts  migrate.test.ts  migrate.ts  scan.test.ts  scan.ts
src/views/: HistoryView.vue  LinksView.vue  MigrateView.vue  ScanView.test.ts  ScanView.vue  SettingsView.updater.test.ts  SettingsView.vue
