[package]
name = "dayu-disk-manager"
version = "0.1.0"
description = "大禹磁盘管理器"
authors = ["dayu"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dayu_disk_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
log = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"

[target.'cfg(windows)'.dependencies]
junction = "1"
# VSS initializes the migration worker as MTA. The recycle-bin implementation
# runs on that worker after the junction is in place, so its COM mode must match.
trash = { version = "5", default-features = false, features = ["coinit_multithreaded"] }
windows = { version = "0.62", features = [
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_System_RestartManager",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Security",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Storage_Vss",
    "Win32_System_Com",
] }

[dev-dependencies]
tempfile = "3"
proptest = "1"
